Centralize Styling Sheet for Sorting Visualizers for easy changes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sorting Visualizer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="https://github.com/Shreyanshs1" class="github">GitHub</a>
+        <p>Shreyansh Srivastava</p></nav>
     <div class="main-ctnr">
         <h1>Sorting Algorithm Visualizer</h1>
         <div class="visualizers">
-            <a href="./Bubble Sort/index.html">Bubble Sorting Visualizer</a>
-            <a href="./Selection Sort/index.html">Selection Sorting Visualizer</a>
+            <a href="./Bubble Sort/index.html" class="bttn">Bubble Sorting Visualizer</a>
+            <a href="./Selection Sort/index.html" class="bttn">Selection Sorting Visualizer</a>
+            <a href="./Insertion Sort/index.html" class="bttn">Insertion Sorting Visualizer</a>
         </div>
     </div>
 </body>
