Add Quick Sort Visualizer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a href="./Bubble Sort/index.html" class="bttn">Bubble Sorting Visualizer</a>
             <a href="./Selection Sort/index.html" class="bttn">Selection Sorting Visualizer</a>
             <a href="./Insertion Sort/index.html" class="bttn">Insertion Sorting Visualizer</a>
+            <a href="./Merge Sort/index.html" class="bttn">Merge Sorting Visualizer</a>
+            <a href="./Quick Sort/index.html" class="bttn">Quick Sorting Visualizer</a>
         </div>
     </div>
 </body>
