--- a/Quick Sort/index.html
+++ b/Quick Sort/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../sorting.css">
 </head>
-<body>
-    <div class="main" id="main">
+<body><nav class="navbar">
+    <a href="https://github.com/Shreyanshs1" class="github">GitHub</a>
+    <p>Shreyansh Srivastava</p></nav>
+<div class="main" id="main">
+    <h2>Quick Sort</h2>
         <canvas id="canvas" width="800" height="420"></canvas>
         <div class="btn-ctnr">
             <button id="btn">Start</button>
