--- a/Selection Sort/index.html
+++ b/Selection Sort/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="../sorting.css">
 </head>
 <body>
-    <div class="main" id="main">
+    <nav class="navbar">
+    <a href="https://github.com/Shreyanshs1" class="github">GitHub</a>
+    <p>Shreyansh Srivastava</p></nav>
+<div class="main" id="main">
+    <h2>Selection Sort</h2>
         <canvas id="canvas" width="800" height="420"></canvas>
         <div class="btn-ctnr">
             <button id="btn">Start</button>
